--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "@sanity/cli": "^2.26.0",
+    "@sanity/client": "^3.0.3",
     "next": "latest",
     "next-sanity": "^0.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.3",
     "react-portable-text": "^0.4.3"
   },
   "devDependencies": {
