--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@sanity/cli": "^2.26.0",
     "@sanity/client": "^3.0.3",
+    "font-color-contrast": "^11.1.0",
     "next": "latest",
     "next-sanity": "^0.4.0",
     "react": "^17.0.2",
